[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swarms-fork"
version = "0.1.0"
description = "A fork of kyegomez/swarms — scalable multi-agent orchestration framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["agents", "swarms", "llm", "multi-agent", "orchestration", "ai"]
authors = [
  { name = "swarms-fork contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "openai>=1.30.0",
  "anthropic>=0.28.0",
  "loguru>=0.7.2",
  "pydantic>=2.7.0",
  "tenacity>=8.3.0",
  "tiktoken>=0.7.0",
  "rich>=13.7.1",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.7",
  "mypy>=1.10.0",
  "pre-commit>=3.7.1",
]
vector = [
  "faiss-cpu>=1.8.0",
  "chromadb>=0.5.0",
]
tools = [
  "duckduckgo-search>=6.1.9",
  "beautifulsoup4>=4.12.3",
  "requests>=2.32.0",
]
all = [
  "swarms-fork[dev,vector,tools]",
]

[project.urls]
Homepage = "https://github.com/your-org/swarms"
Repository = "https://github.com/your-org/swarms"
Issues = "https://github.com/your-org/swarms/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["swarms"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# removed --cov flags so a plain `pytest` run doesn't require pytest-cov to be installed
# -v for verbose output — easier to see which tests pass/fail during local dev
# removed -q so verbose output isn't suppressed by quiet mode at the same time
addopts = "-v"

[tool.coverage.run]
source = ["src/swarms"]
omit = ["tests/*", "**/__init__.py"]
